<resources>
    <string name="app_name">LoginKt</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_tb">Sign up ?</string>
    <string name="name">name</string>
    <string name="register_number">register number</string>
    <string name="cse">cse</string>
    <string name="ece">ECE</string>
    <string name="eee">EEE</string>
    <string name="mech">Mech</string>
    <string name="year_1">year 1</string>
    <string name="year_2">year 2</string>
    <string name="year_3">year 3</string>
    <string name="year_4">year 4</string>
    <string name="not_a_member">Not a member</string>
    <string name="add_question">Add question</string>
    <string name="subject_name">Subject Name</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="ask">Ask</string>
    <string name="ask_your_question">Ask your Question</string>
    <string name="no_question">No Question</string>
    <string name="answers">Answers :</string>
    <string name="answer1">Answer1</string>
    <string name="visible_if_list_is_empty">visible if list is empty</string>
    <string name="not_answerd_write_yours">not answerd!, write Yours!</string>
    <string name="your_answer">Your answer</string>
    <string name="senBtn"><![CDATA[>]]></string>
    <string name="sendbutton">SendButton</string>
</resources>