<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#492AD5"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="389dp"
        android:layout_height="519dp"
        android:layout_marginTop="184dp"
        android:background="#EDFFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="330dp"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="76dp"
            android:autofillHints="krish0cyber@gmail.com"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="200dp"
            android:autofillHints="krish0cyber@gmail.com"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="300dp"
            android:text="@string/login"
            android:visibility="visible" />

        <Button
            android:id="@+id/SupTB"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:layout_marginTop="450dp"
            android:text="@string/sign_up_tb"
            android:textColor="#0C44EA"
            app:iconTint="#3A2E2E" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_member"
            android:layout_marginTop="465dp"
            android:layout_marginStart="170dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        android:fontFamily="monospace"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>